# project3

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md  assignment.md  compilation.md  containers.md  dynamic_memory.md  makefiles.md  navigating_buffers.md  notes.md
maybe_useful/: CMakeLists.txt  functions.vim  install_dependencies.sh  local-vimrc
src/: Array2D.cpp  Array2D.hpp  CMakeLists.txt  Matrix.cpp  Matrix.hpp
tests/: CMakeLists.txt
